[package]
name = "auto_encoder"
version = "0.2.3"
edition = "2021"
description = "Auto encoding library"
repository = "https://github.com/spider-rs/auto-encoder"
authors = [
    "j-mendez <jeff@spider.cloud>"
]
readme = "README.md"
keywords = ["encoding", "auto-encoding"]
categories = ["web-programming", "command-line-utilities"]
documentation = "https://docs.rs/auto_encoder"
license = "MIT"

[dependencies]
phf = { version = "0.11", features = ["macros"] }
chardetng = { version = "0.1" }
encoding_rs = { version = "0.8" }
memchr = "2"

[dev-dependencies]
maud = "0.26"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "detect"
harness = false
